--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/hassan-bachir/Kubernetes-demo/issues"
   },
-  "homepage": "https://github.com/hassan-bachir/Kubernetes-demo#readme"
+  "homepage": "https://github.com/hassan-bachir/Kubernetes-demo#readme",
+  "dependencies": {
+    "express": "^5.2.1"
+  }
 }
